Fix on mobile view where x button does not show up on RunwayValidation.js

--- a/src/css/runway-validation.css
+++ b/src/css/runway-validation.css
@@ -17,7 +17,7 @@
 }
 
 .react-autosuggest__input {
-    width: 300px;
+    width: 88%;
     height: 30px;
     padding: 8px 8px;
     margin-right: 8px;
